# awfixer-agent

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.autoawfixer  Dockerfile.autoawfixer.dockerignore  Dockerfile.dockerignore  README.md  REBRANDING.md  bunfig.toml  flake.nix  package.json  rust-toolchain.toml  skills
android-app/: README.md  gradle.properties  settings.gradle.kts
docs/: ERRATA-GPT5-HARMONY.md  advisor-watchdog.md  ai-schema-normalize.md  approval-mode.md  auth-broker-gateway.md  collab.md  compaction.md  config-usage.md  context-files.md  custom-tools.md  environment-variables.md  extension-loading.md  extensions.md  hooks.md  install-id.md  keybindings.md  lsp-config.md  macos-signing-notarization.md  marketplace.md  mcp-config.md  mcp-server-tool-authoring.md  mnemosyne-memory-backend.md  models.md  natives-addon-loader-runtime.md  natives-architecture.md  natives-binding-contract.md  natives-build-release-debugging.md  natives-media-system-utils.md  natives-shell-pty-process.md  natives-text-search-pipeline.md  plugin-manager-installer-plumbing.md  porting-from-pi-mono.md  porting-to-natives.md  provider-streaming-internals.md  providers.md  python-repl.md  resolve-tool-runtime.md  rpc.md  rulebook-matching-pipeline.md  sdk.md  (+12 more)
github-app/: .env.example  .gitignore  Dockerfile.gateway  Dockerfile.worker  README.md  docker-compose.yml  railway.toml
github-app/worker/: README.md  pyproject.toml
github-app/worker/src/prwatch/: __init__.py  __main__.py  cli.py  config.py  db.py  git_ops.py  github_auth.py  github_client.py  host_tools.py  kernel_sandbox.py  pipeline.py  review_driver.py  review_persona.py  runner.py  sandbox_exec.py  worktree.py
github-app/worker/src/prwatch/prompts/: kickoff_review.md
github-app/worker/tests/: conftest.py  support.py  test_config.py  test_db_claim.py  test_host_tools.py  test_integration_smoke.py  test_pipeline.py  test_sandbox_stub.py  test_sandbox_sync.py  test_worktree.py
infra/: runner.Dockerfile
prompts/: DYNA-context.md  RAILWAY-robo.md
python/: pyproject.toml
python/omp-rpc/: README.md  pyproject.toml
scripts/: check-spoofed-versions.ts  ci-concurrency.test.ts  ci-macos-upload-secrets.sh  ci-release-build-binaries.ts  ci-release-notes.ts  ci-release-publish.ts  ci-test-ts.ts  ci-update-brew-formula.test.ts  ci-update-brew-formula.ts  docs-rebrand-sweep.ts  fix-changelogs.ts  fix-test-imports.ts  host-detect.ts  install-local.ts  install-post-build.ts  install.ps1  install.sh  rebrand-codemod.ts  release.ts  rewrite-changelog.ts  rewrite-system-prompt.ts  setup-npm-trust.ts  sync-versions.ts  tool-prompt-usage.ts
transition-docs/: REBRANDING.md  dropping-windows.md  expanding-robomp.md  linux-code.md  macos-code.md  npm-scope-rebrand.md  (+2 more)
(+415 files in other folders)
